tests/compile-fail/integration__integration__mapfiles__intrinsic_name_missing_arg.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: invalid intrinsic name: not enough arguments to intrinsic name
  ┌─ <mapfile>:3:3
  │
3 │ 4 CondJmp(>=)
  │   ^^^^^^^^^^^ not enough arguments to intrinsic name


